my back works!!! also add migrations!

--- a/WebApiFoundations/appsettings.json
+++ b/WebApiFoundations/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=WebApiFound;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "server=CS-LWYOSDLVWZ0R; database=CompanyEmployee;User ID=sa;Password=SuperSecretPassword!;Integrated Security=SSPI; TrustServerCertificate=true;"
   },
   "JwtSettings": {
     "validIssuer": "https://localhost:7015",
