The body almost ready ! notice: Register should check if there is a role or should i add a user Role?

--- a/WebApiFoundations/appsettings.json
+++ b/WebApiFoundations/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=CS-LWYOSDLVWZ0R; database=CompanyEmployee;User ID=sa;Password=SuperSecretPassword!;Integrated Security=SSPI; TrustServerCertificate=true;"
+    "DefaultConnection": "server=CS-LWYOSDLVWZ0R; database=WebApiFound;User ID=sa;Password=SuperSecretPassword!;Integrated Security=SSPI; TrustServerCertificate=true;"
   },
   "JwtSettings": {
     "validIssuer": "https://localhost:7015",
     "validAudience": "http://localhost:3000",
     "expires": 120,
-    "SecretKey": "Wow Nice Secret Key"
+    "SecretKey": "Wow Nice Secret Key , super Nice Secret Key"
   }
 }
